--- a/exercice1.html
+++ b/exercice1.html
@@ -5,7 +5,15 @@
     <title>Voiture fonctionnant à l'energie solaire</title>
 </head>
 <body>
-
+<div><img id= "image" src="" alt=""></div>
+<div id="Name"></div>
+<div id="Roues"></div>
+<div id="Color"></div>
+<div id="Construteur"></div>
+<div id="Carburant"></div>
+<div id="NbrePortes"></div>
+<div id="Autonomie"></div>
+<div id="VMax"></div>
 
     <script type="text/javascript" src="exercice1.js"></script>
 </body>
